--- a/styles/global.css
+++ b/styles/global.css
@@ -35,3 +35,18 @@ a:hover {
 h1 , h2, h3 {
   font: inherit;
 }
+
+.container {
+max-width: 1280px;
+padding-inline: 32px;
+margin-inline: auto;
+
+
+}
+/* Utility-first (Classe que so vai fazer uma coisa */
+.grid {
+  display: grid;
+}
+.grid-flow-col {
+  grid-auto-flow: column;
+}
