--- a/styles/sections.css
+++ b/styles/sections.css
@@ -4,4 +4,23 @@
     object-fit: cover;
     border-radius: 4px;
   }
+  .card {
+    border-radius: 4px;
+    overflow: hidden;
+    position: relative;
+
+
+    /*o & subustitui o nome da propriedade nesse caso o card*/
+    &::before {
+      content:"" ;
+      position: absolute;
+      inset: 0;
+      top: 50%;
+      background: linear-gradient(
+        180deg,
+        transparent 0%,
+        #020617 100%
+      );
+    }
+  }
 }
