--- a/styles/sections.css
+++ b/styles/sections.css
@@ -27,6 +27,10 @@
       bottom: 0;
 
       padding: 24px;
+/* Se Tem essa classe aplica */
+      &:has(.text-lg) {
+        padding: 12px;
+      }
 
       h2 {
         margin-top:8px ;
